--- a/src/phone_directory-app/phone_directory-app.html
+++ b/src/phone_directory-app/phone_directory-app.html
@@ -2,14 +2,11 @@
 
 <dom-module id="phone_directory-app">
   <template>
-    <style>
-      :host {
-        display: block;
-      }
-    </style>
-    <h2>Hello [[prop1]]!</h2>
+    <link rel="stylesheet" href="../assets/css/phone_directory-app/phoneDirectory.css">    
+    <div class="main-title-phone-directory">
+      <h1>Amazing Directory <small><a href="#">About me</a></small></h1>
+    </div>
   </template>
-
   <script>
     /**
      * @customElement
@@ -21,7 +18,7 @@
         return {
           prop1: {
             type: String,
-            value: 'phone_directory-app'
+            value: 'Amazing Directory'
           }
         };
       }
