--- a/index.html
+++ b/index.html
@@ -8,15 +8,23 @@
     <link rel="stylesheet" href="src/assets/css/index.css">
     <title>Amazing Directory</title>
     <meta name="description" content="Challenge proposed by Yhoshua for the bootcamp">
-
     <!-- See https://goo.gl/OOhYW5 -->
     <link rel="manifest" href="/manifest.json">
-
     <script src="/bower_components/webcomponentsjs/webcomponents-loader.js"></script>
+    
+    <link rel="import" href="src/views/phone_directory-app/phone_directory-app.html" />
+    
+    <link rel="import" href="src/views/contact_list-phone/contact_list-phone.html" />
 
-    <link rel="import" href="/src/phone_directory-app/phone_directory-app.html">
+    <link rel="import" href="src/views/info_contact-phone/info_contact-phone.html" />
   </head>
   <body>
-    <phone_directory-app></phone_directory-app>
+    <header>
+      <phone_directory-app></phone_directory-app>
+    </header>
+    <main>
+      <contact_list-phone></contact_list-phone>
+      <info_contact-phone></info_contact-phone>
+    </main>
   </body>
 </html>
